CMAKE_MINIMUM_REQUIRED(VERSION 3.8)
PROJECT(service_test)

FIND_PACKAGE(ament_cmake REQUIRED)
FIND_PACKAGE(std_srvs REQUIRED)

FIND_PACKAGE(ament_cmake_python REQUIRED)
FIND_PACKAGE(rclpy REQUIRED)

AMENT_PYTHON_INSTALL_PACKAGE("src")

INSTALL(
    PROGRAMS src/TestServer.py
    DESTINATION lib/${PROJECT_NAME}
)

INSTALL(
    PROGRAMS src/TestClient.py
    DESTINATION lib/${PROJECT_NAME}
)

INSTALL(
    PROGRAMS src/NetworkAgent.py
    DESTINATION lib/${PROJECT_NAME}
)

AMENT_PACKAGE()